--- a/src/components/TweetForm/TweetFormFooter.css
+++ b/src/components/TweetForm/TweetFormFooter.css
@@ -37,6 +37,10 @@
   color: rgb(54, 65, 65);
 }
 
+.TweetFormFooter-item a {
+  color: black;
+  text-decoration: none;
+}
 .TweetFormFooter-item:hover {
   background-color: #d3d3d3;
 }
