--- a/src/components/TweetForm/TweetFormProfileList.css
+++ b/src/components/TweetForm/TweetFormProfileList.css
@@ -35,7 +35,7 @@
   color: rgba(29, 161, 242, 1);
 }
 
-.TweetFormProfileList-item {
+.TweetFormProfileList-item, .TweetFormProfileListItem {
   cursor: pointer;
   padding: 8px;
   display: flex;
@@ -45,7 +45,9 @@
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */
 }
-
+.TweetFormProfileList-Item-Link {
+  text-decoration: none;
+}
 .TweetFormProfileList-content-name {
   font-size: 13px;
   font-weight: 600;
@@ -77,7 +79,4 @@
 }
 .TweetFormProfileList-network {
   list-style: none;
-}
-.TweetFormProfileList-Item-Link {
-  text-decoration: none;
 }
